# SonyCameraApp

./: .gitignore.txt  CMakeLists.txt  Main.qml  README.md  liveviewprovider.h  main.cpp  qrc.qrc  sony.h  sonycamera.cpp  sonycamera.h
